--- a/01-playbook.yaml
+++ b/01-playbook.yaml
@@ -1,5 +1,6 @@
 - name: ping playbook
-  hosts: node
-  tasks: 
-    -name: ping the server
-    ansible.builtin.ping:
+  hosts: web
+  gather_facts: no
+  tasks:
+    - name: ping the server
+      ansible.builtin.ping:
