--- a/03-variables.yaml
+++ b/03-variables.yaml
@@ -6,6 +6,9 @@
 
   tasks:
   - name : checking the varibales
+    vars: 
+     tool_name: "AWS"
+     Duration: "4 weeks"
     ansible.builtin.debug:
       msg: "Hi, This is the prcticing of tools {{tool_name}}, for which it will take time {{Duration}}"
 
