--- a/04.variables_from_files.yaml
+++ b/04.variables_from_files.yaml
@@ -5,4 +5,4 @@
   tasks:
   - name : checking the variables
     ansible.builtin.debug:
-      msg: "Hi, This is the practicing of tools {{tool_name}}, for which it will take time {{Duration}}"
+      msg: "Hi, This is the practicing of {{course}} by using tools {{tool_name}}, for which it will take time {{Duration}}"
