--- a/04.variables_from_files.yaml
+++ b/04.variables_from_files.yaml
@@ -1,7 +1,7 @@
 - name : variable script
   hosts: node
   vars_files:
-   variables.yaml
+  - variables.yaml
   tasks:
   - name : checking the variables
     ansible.builtin.debug:
