push the fifth file

--- a/05.To_print_os_&_IP.yaml
+++ b/05.To_print_os_&_IP.yaml
@@ -1,7 +1,7 @@
 ---
 - name : to print the os details and ip
   hosts: all
-  became: yes
+  become: yes
   tasks: 
   - name: To print the os details
     command: cat /etc/os-release
