--- a/05.To_print_os_&_IP.yaml
+++ b/05.To_print_os_&_IP.yaml
@@ -4,7 +4,7 @@
   become: yes
   tasks: 
   - name: To print the os details
-    command: cat /etc/os-release
+    shell: cat /etc/os-release | grep os
 
   - name: to print the ip details
     shell: ip a | grep inet && ifconfig
