--- a/05.To_print_os_&_IP.yaml
+++ b/05.To_print_os_&_IP.yaml
@@ -3,7 +3,7 @@
    hosts: all
    tasks:
      - name : To print all the deatils
-       ansible.buildin.debug:
+       ansible.builtin.debug:
        msg: 
          - "Operating System: {{ ansible_distribution }} {{ ansible_distribution_version }}"
          - "Major Release: {{ ansible_distribution_major_version }}"
