--- a/06. Install_httpd_if_redhat.yaml
+++ b/06. Install_httpd_if_redhat.yaml
@@ -10,7 +10,7 @@
       ansible.builtin.package:
         name: "{{ package_name }}"
         state: present
-      when: ansible_os_family == "Redhat"
+      when: ansible_os_family == "RedHat"
 
     - name: start the service
       ansible.builtin.service:
