push the fifth file

--- a/06. Install_httpd_if_redhat.yaml
+++ b/06. Install_httpd_if_redhat.yaml
@@ -16,3 +16,4 @@
       ansible.builtin.service:
         name: "{{ package_name }}"
         state: started
+      when: ansible_os_family == "RedHat"  
