push the fifth file

--- a/06. Install_httpd_if_redhat.yaml
+++ b/06. Install_httpd_if_redhat.yaml
@@ -15,5 +15,5 @@
     - name: start the service
       ansible.builtin.service:
         name: "{{ package_name }}"
-        state: started
+        state: restarted
       when: ansible_os_family == "RedHat"  
