--- a/07.copy_file_within_the_remote_servers.yaml
+++ b/07.copy_file_within_the_remote_servers.yaml
@@ -5,13 +5,13 @@
    tasks:
     - name: creating the file in the remote servers
       ansible.builtin.file:
-        path: /home/ec2-user/test_file.yaml
+        path: /home/ec2-user/test_file_1.yaml
         state: touch
 
     - name: copying file from one loaction to another location
       ansible.builtin.shell:
-        src: /home/ec2-user/test_file.yaml
-        dest: /tmp
+        src: /home/ec2-user/test_file_1.yaml
+        dest: /tmp/test_file_1.yaml
         remote_src: yes
 
         
