--- a/07.copy_file_within_the_remote_servers.yaml
+++ b/07.copy_file_within_the_remote_servers.yaml
@@ -9,7 +9,7 @@
         state: touch
 
     - name: copying file from one loaction to another location
-      ansible.builtin.shell:
+      ansible.builtin.copy:
         src: /home/ec2-user/test_file_1.yaml
         dest: /tmp/test_file_1.yaml
         remote_src: yes
