--- a/07.copy_file_within_the_remote_servers.yaml
+++ b/07.copy_file_within_the_remote_servers.yaml
@@ -5,11 +5,17 @@
    tasks:
     - name: creating the file in the remote servers
       ansible.builtin.file:
-        path: /etc/test_file_1.yaml
+        path: /etc/test_file_1.txt
         state: touch
+
+    - name: storing some info in the file
+      ansible.builtin.lineinfile:
+        path: /etc/test_file_1.txt
+        line: "this is the info adding in the file"
+        create: yes
 
     - name: copying file from one loaction to another location
       ansible.builtin.copy:
-        src: /etc/test_file_1.yaml
-        dest: /tmp/.
+        src: /etc/test_file_1.txt
+        dest: /tmp/test_file_1_copy.txt
         remote_src: yes
