push the eight  file

--- a/09.uninstall_packages_loop.yaml
+++ b/09.uninstall_packages_loop.yaml
@@ -13,6 +13,7 @@
         - nginx
         - htop
         - curl
+        - httpd
       ignore_errors: yes
       loop_control: 
        label: Uninstalling the packages {{ item }}
