push the tenth  file

--- a/10.stop_a_service_on_condition.yaml
+++ b/10.stop_a_service_on_condition.yaml
@@ -8,7 +8,7 @@
 
           
     - name: stopping the service on facts bases
-      ansibel.builtin.service:
+      ansible.builtin.service:
        name: nginx
        state: stopped
       when: 
