--- a/10.stop_a_service_on_condition.yaml
+++ b/10.stop_a_service_on_condition.yaml
@@ -12,5 +12,5 @@
        name: nginx
        state: stopped
       when: 
-       - ansible.facts.services['nginx.service'] is defined # In Ansible, if you try to check the state of nginx.service on a server where Nginx isn't even installed, the playbook will crash with an "undefined" error.
-       - ansible.facts.services['nginx.service'].state == 'active'   # checking service facts and mentioning the specifci service + state of service     
+       - ansible_facts.services['nginx.service'] is defined # In Ansible, if you try to check the state of nginx.service on a server where Nginx isn't even installed, the playbook will crash with an "undefined" error.
+       - ansible_facts.services['nginx.service'].state == 'running'   # checking service facts and mentioning the specifci service + state of service     
