--- a/10.stop_a_service_on_condition.yaml
+++ b/10.stop_a_service_on_condition.yaml
@@ -10,7 +10,7 @@
     - name: stopping the service on facts bases
       ansible.builtin.service:
        name: nginx
-       state: present
+       state: started
       when: 
        - ansible_facts.services['nginx.service'] is defined # In Ansible, if you try to check the state of nginx.service on a server where Nginx isn't even installed, the playbook will crash with an "undefined" error.
        - ansible_facts.services['nginx.service'].state == 'stopped'   # checking service facts and mentioning the specifci service + state of service     
